set java memory settings.